--- a/gradient1.css
+++ b/gradient1.css
@@ -121,6 +121,7 @@ body{
 .head{
   width: 60%;
   height: auto;
+
 }
 h1{
     margin-top: 0px;
@@ -137,7 +138,7 @@ hr{
 }
 .space{
     width: 0%;
-    height: 60px;
+    height: 30px;
     border: none;
 }
 .lspace{
@@ -175,4 +176,10 @@ hr{
 .container{
     display: flex;
     align-items: center;
+}
+.ms {
+  width: 50%;
+  height: auto;
+  margin-bottom: 20px;
+  max-width: 600px;
 }
